# artist-graph

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-docker.yml  python-package.yml
art_graph/: __init__.py  _version.py  engines.py  secrets.py
art_graph/cinegraph/: fame.py  grapher.py  imdb_grapher.py  imdb_tsv.py  professional_path.py  random_path.py  weights.py
art_graph/cinema_data_providers/: filters.py  imdb_config.py  tmdb_models.py
art_graph/cinema_data_providers/cache/: cached_client.py  db.py  operations.py  orm_models.py
art_graph/cinema_data_providers/imbd_non_commercial/: imdb_non_commercial_pydantic_models.py  locations.py  name_basics.py  table_builder.py  title_akas.py  title_basics.py  title_crew.py  title_episode.py  title_principals.py  title_ratings.py
art_graph/cinema_data_providers/imdb_non_commercial/: block_fetcher.py  constants.py  imdb_non_commercial_orm_models.py  imdb_non_commercial_pydantic_models.py  key_validator.py  line_infos.py  locations.py  name_lookup.py  queries.py  table_builder.py  utils.py
art_graph/cinema_data_providers/tmdb/: client.py  config.py
art_graph/tests/: data4tests.py  fixture_imbd_tsv.py  test_cache_operations.py  test_cache_orm.py  test_cached_client.py  test_directories.py  test_example.py  test_extractor.py  test_fame.py  test_filters.py  test_grapher.py  test_imdb_tsv.py  test_mock_imbd.py  test_node_types.py  test_professional_path.py  test_random_path.py  test_tmdb_client.py  test_tmdb_models.py  test_weights.py
art_graph/tests/imdb_non_commercial/: conftest.py  test_imdb_non_commercial_pydantic_models.py  test_locations.py  test_orm_table.py  test_table_builder.py  test_table_read_write.py  test_utils.py
art_graph/tests/test_data/: bacon_filmography.json  natalie_filmography.json  sarah_filmography.json  small_professional_graph.json  small_professional_graph.pkl  tmdb_2001_movie_details.json  tmdb_2001_search.json  tmdb_bacon_details.json  tmdb_bacon_search.json
data/: actors.csv  movies.csv
docs/: tmdb_fields.md
notebooks/: cinema_game.ipynb
scripts/: IMDb_DISCLAMER.md  README.md  imdb_download.py  s3_2db.py
