[tool.poetry]
name = "art_graph"
version = "0.2.3"
description = "Tools for creating and analyzing art graphs"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "art_graph"}]
include = ["data/*", "README.md", "art_graph/tests/test_data/*"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
networkx = "^3.3"
requests = "^2.31.0"
tqdm = "^4.66.4"
pydantic = "^2.7.3"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
sqlalchemy = "^2.0.49"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
coverage = "^7.12.0"
ruff = "^0.15.11"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.4.8"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"_version.py" = ["F841"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
